--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
                 <h1>🎍 新春！おみくじ 🎍</h1>
 
                 <div class="kekka">
-                    <div id="result-display">?</div>
+                    <div id="result-display">？</div>
+                    <div id="lucky-item" style="font-size: 1.2rem; margin-top: 10px; color: #555;"></div>
+                    <div id="minimessage" style="font-size: 1.2rem; margin-top: 10px; color: #555;"></div>
                 </div>
 
             <button id="omikuji-btn">おみくじをひく</button>
+            <p id="guide">ボタンを押してから、スマホを振ってね！</p>
 
             </div>
         
