--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
                 <div class="kekka">
                     <div id="result-display">？</div>
-                    <div id="lucky-item" style="font-size: 1.2rem; margin-top: 10px; color: #555;"></div>
+                    <div id="lucky-items" style="font-size: 1.2rem; margin-top: 10px; color: #555;"></div>
                     <div id="minimessage" style="font-size: 1.2rem; margin-top: 10px; color: #555;"></div>
                 </div>
 
